2006-05-11 Kalpit Desai <kvdesai@email.unc.edu>
	* threePoleFreqSweep.fig: Version 2.2
	- All coils now share a common slider for amplitude.
	- Instead of three edit-boxes, a pull-down menu is provided to select the coil configuration
	- Added a 'synthesize' button to let user synthesize the drive signal before hand. Eliminates the undetermined delay between when user told to start the sweep and when it actually started.
	* threePoleFreqSweep.m:
	- Quickened signal synthesis using matlab profiler.
	- Coding that was necessary to implement the above mentioned changes in the architecture.

2005-10-06 Kalpit Desai <kvdesai@email.unc.edu>
	* ChangeLog.txt: fixed the date of last two commits.
2005-10-05 Kalpit Desai <kvdesai@email.unc.edu>
	* threePoleFreqSweep.m:
	- Fixed a small bug in estimatation of time.
	- Now connects to DAC board when starting, and doesn't disconnect until program is closed.
	* threePoleFreqSweep.fig: minor text changes.

2005-10-05 Kalpit Desai <kvdesai@email.unc.edu>
	* threePoleFreqSweep.m: Version 2.1
	- Now reestimates how long will the sweep take, whenever any related parameter is changed by user, and displays the new estimate.
	- Added a message box on the gui to tell user what is going on.
	* threePoleFreqSweep.fig: related changes.

2005-10-04 Kalpit Desai <kvdesai@email.unc.edu>
	* threePoleFreqSweep.m: Version 2.0 [major changes]
	- Now ON-time and dwell-time are to be specified it terms of number of cyles instead of number of seconds.
	- Test frequencies are to be specified by three parameters: min, step and max.
	- Tells how long the frequency sweep would take.
	- Tested working for the boundary cases that I could think of
	- cleaned up and modularized code
	* threePoleFreqSweep.fig: Architectural chagnes that go with the new version of code.

2005-08-26 Kalpit Desai <kvdesai@email.unc.edu>
	* threePoleFreqSweep.m: Fixed coupel of bugs in stopping and quitting of the program.
2005-08-26 Kalpit Desai <kvdesai@email.unc.edu>